--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "~1.17.1",
+    "connect-mongo": "^1.3.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "express-session": "^1.15.2",
+    "mongodb": "^2.2.26",
+    "mongoose": "^4.9.5",
     "morgan": "~1.8.1",
+    "nodemon": "^1.11.0",
     "pug": "~2.0.0-beta11",
     "serve-favicon": "~2.4.2"
   }
